# renderer

./: .clang-format  .cppQuickFix  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  COPYRIGHT_NOTICES  README.md  clone_lib_dependencies.sh  creating_apk_keys.md  license_header_template.txt  normal_fix.patch
app/: About.qml  AbstractMapLabelModel.h  AppSettings.cpp  AppSettings.h  CMakeLists.txt  CameraControls.qml  CameraFilterProxyModel.cpp  CameraFilterProxyModel.h  CameraTransformationProxyModel.cpp  CameraTransformationProxyModel.h  Coordinates.qml  DebugWindow.qml  FABGroup.qml  FeatureDetailWindow.qml  FilterWindow.qml  FloatingActionButtonGroup.qml  GeneralSettings.qml  GlSettings.qml  GnssInformation.cpp  GnssInformation.h  HotReloader.cpp  HotReloader.h  LabelFilter.cpp  LabelFilter.h  Main.qml  Map.qml  MapLabel.h  MapLabelModel.cpp  MapLabelModel.h  ModelBinding.cpp  ModelBinding.h  PickerWindow.qml  RenderThreadNotifier.cpp  RenderThreadNotifier.h  RenderingContext.cpp  RenderingContext.h  RoundMapButton.qml  SearchBox.qml  SearchResults.qml  Settings.qml  (+20 more)
app/android/: AndroidManifest.xml  workaround_qt_cmake_build_bug.sh
app/components/: CheckBox.qml  CheckGroup.qml  ColorPicker.qml  ComboBox.qml  DateMonthTablePicker.qml  DatePicker.qml  DrawerButton.qml  DrawerItem.qml  DrawerSeparator.qml  DrawerSpacer.qml  FloatingActionButton.qml  LabledRangeSlider.qml  LabledSlider.qml  PageDrawer.qml  RoundMapButton.qml  SetDivider.qml  SetGroup.qml  SetPanel.qml  SetTitle.qml  SettingsPanel.qml  SettingsTitle.qml  SunAnglePicker.qml  ValRangeSlider.qml  ValSlider.qml  VectorEditor.qml  Window.qml
app/eaws/: AT-02_micro-regions.geojson.json  AT-03_micro-regions.geojson.json  AT-04_micro-regions.geojson.json  AT-05_micro-regions.geojson.json  AT-06_micro-regions.geojson.json  AT-07_micro-regions.geojson.json  AT-08_micro-regions.geojson.json  EUREGIO_de_CAAMLv6.json  eawsRegionNames.json  report_tu_wien.json
app/i18n/: de.ts
app/picker/: Default.qml  PoiAlpineHut.qml  PoiPeak.qml  PoiSettlement.qml  PoiWebcam.qml
app/timing/: TimerFrontendManager.cpp  TimerFrontendManager.h  TimerFrontendObject.cpp  TimerFrontendObject.h
apps/webgpu_app/: App.cpp  App.h  CMakeLists.txt  ImGuiManager.cpp  ImGuiManager.h  RenderingContext.cpp  RenderingContext.h  main.cpp  resources.qrc
gl_engine/: AsyncQueryTimerManager.cpp  AsyncQueryTimerManager.h  Atmosphere.cpp  Atmosphere.h  AvalancheReportManager.cpp  AvalancheReportManager.h  AvalancheWarningLayer.cpp  AvalancheWarningLayer.h  CMakeLists.txt  Context.cpp  Context.h  DebugPainter.cpp  DebugPainter.h  Framebuffer.cpp  Framebuffer.h  GpuAsyncQueryTimer.cpp  GpuAsyncQueryTimer.h  MapLabel.cpp  MapLabel.h  MapLabelManager.cpp  MapLabelManager.h  MapLabels.cpp  MapLabels.h  PolyLine.cpp  PolyLine.h  SSAO.cpp  SSAO.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  ShaderRegistry.cpp  ShaderRegistry.h  ShadowMapping.cpp  ShadowMapping.h  Texture.cpp  Texture.h  TextureLayer.cpp  TextureLayer.h  TileGeometry.cpp  (+17 more)
gl_engine/shaders/: atmosphere_bg.frag  atmosphere_implementation.glsl  camera_config.glsl  compose.frag  depth.frag  eaws.frag  eaws.glsl  encoder.glsl  (+25 more)
nucleus/: AbstractRenderWindow.cpp  AbstractRenderWindow.h  CMakeLists.txt  Controller.cpp  Controller.h  DataQuerier.cpp  DataQuerier.h  EngineContext.cpp  EngineContext.h  GPX.cpp  GPX.h  Raster.h  Raster3D.h  Tile.cpp  Tile.h  TileLoadService.cpp  TileLoadService.h  TileScheduler.cpp  TileScheduler.h  Track.cpp  Track.h  event_parameter.h  srs.cpp  srs.h  version.cpp.in  version.h  version.h.in
plain_renderer/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
unittests/: CMakeLists.txt  RateTester.cpp  RateTester.h  cache_queries.cpp  catch2_helpers.h  main.cpp  nucleus_camera_near_plane_adjuster.cpp  nucleus_tile_load_service.cpp  nucleus_tile_scheduler_cache.cpp  nucleus_tile_scheduler_layer_assembler.cpp  nucleus_tile_scheduler_quad_assembler.cpp  nucleus_tile_scheduler_rate_limiter.cpp  nucleus_tile_scheduler_scheduler.cpp  nucleus_tile_scheduler_slot_limiter.cpp  nucleus_tile_scheduler_tile_load_service.cpp  nucleus_tile_scheduler_util.cpp  nucleus_utils_Base64Codec.cpp  nucleus_utils_stopwatch.cpp  test_Camera.cpp  test_DeltaTime.cpp  test_DrawListGenerator.cpp  test_QuadTree.cpp  test_geometry.cpp  test_helpers.h  test_raster.cpp  test_srs.cpp  test_terrain_mesh_index_generator.cpp  test_tile.cpp  test_tile_conversion.cpp  test_track.cpp  test_zppbits.cpp
unittests_gl/: CMakeLists.txt  UnittestGlWindow.cpp  UnittestGlWindow.h  framebuffer.cpp  main.cpp  uniformbuffer.cpp
webgpu/: Buffer.h  CMakeLists.txt  RenderResourceRegistry.cpp  RenderResourceRegistry.h  gpu_utils.cpp  gpu_utils.h  webgpu.cpp  webgpu_interface.cpp  webgpu_interface.hpp
webgpu_app/: CMakeLists.txt  CloudsManager.cpp  CloudsManager.h  GuiManager.cpp  GuiManager.h  ImGuiManager.cpp  ImGuiManager.h  InputMapper.cpp  InputMapper.h  RenderingContext.cpp  RenderingContext.h  SearchService.cpp  SearchService.h  TerrainRenderer.cpp  TerrainRenderer.h  WebInterop.cpp  WebInterop.h  dawn_setup.cpp  imgui_style.h  main.cpp  resources.qrc  webgpu.cpp
webgpu_compute/: CMakeLists.txt  GpuTileStorage.cpp  GpuTileStorage.h  NodeGraph.cpp  NodeGraph.h  NodeRegistry.cpp  NodeRegistry.h
webgpu_engine/: Buffer.cpp  Buffer.h  CMakeLists.txt  CloudRenderer.cpp  CloudRenderer.h  Context.cpp  Context.h  Framebuffer.cpp  Framebuffer.h  PipelineManager.cpp  PipelineManager.h  PipelineSettings.cpp  PipelineSettings.h  ShaderModuleManager.cpp  ShaderModuleManager.h  Test.cpp  Test.h  Texture.cpp  Texture.h  TileGeometry.cpp  TileGeometry.h  TileManager.cpp  TileManager.h  TileSet.h  TrackRenderer.cpp  TrackRenderer.h  UniformBuffer.cpp  UniformBuffer.h  UniformBufferObjects.cpp  UniformBufferObjects.h  Window.cpp  Window.h  compute.cpp  compute.h  dawn_setup.cpp  dawn_setup.h  gpu_utils.cpp  gpu_utils.h  resources.qrc  webgpu.cpp  (+1 more)
webigeo_eval/: CMakeLists.txt  GenerateBatchScript.cmake  Settings.cpp  Settings.h  WebigeoApp.cpp  WebigeoApp.h  main.cpp
(+1053 files in other folders)
